syntax = "proto3";

message TokenizeShareRecord {
  uint64 id = 1;
  string owner = 2;
  string share_token_denom = 3;
  string module_account = 4; // module account take the role of delegator
  string validator = 5; // validator delegated to for tokenize share record creation
}

message QueryTokenizeShareRecordByDenomRequest {
  string denom = 1;
}
message QueryTokenizeShareRecordByDenomResponse {
  TokenizeShareRecord record = 1;
}

message Coin {
  string denom  = 1;
  string amount = 2;
}

message MsgRedeemTokensforShares {
  string delegator_address = 1;
  Coin amount = 2;
}

message MsgRedeemTokensforSharesResponse {}

message MsgTokenizeShares {
  string delegator_address = 1;
  string validator_address = 2;
  Coin amount = 3;
  string tokenized_share_owner = 4;
}

message MsgTokenizeSharesResponse {
  Coin amount = 1;
}

// QuerySupplyOfRequest is the request type for the Query/SupplyOf RPC method.
message QuerySupplyOfRequest {
  // denom is the coin denom to query balances for.
  string denom = 1;
}

// QuerySupplyOfResponse is the response type for the Query/SupplyOf RPC method.
message QuerySupplyOfResponse {
  // amount is the supply of the coin.
  Coin amount = 1;
}
